assets/css/index.css
@font-face {
  font-family: 'Norse Bold';
  src: url('../fonts/norse/Norsebold.otf') format('opentype')
}

html, body {
  height: 100%;
}

body {
  display: flex;
  background-color: white;
  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
  place-items: center;
  margin: 0 auto;
  background-color: rgba(249, 250, 251);
}

main {
  width: 60%;
}

input {
  display: block;
  font-size: 0.9rem;
  border: 1px solid #E5E7EB;
  border-radius: 4px;
  font-weight: 400;
  padding: 0.25rem 0.5rem;
  width: 100%;
}

input:focus {
  outline: 1px solid blue;
  box-shadow: 3px 3px 5px -1px rgba(0, 0, 0, 0.2);
}

input[type='password']:invalid {
  outline: 1px solid red;
}

label {
  color: rgba(0, 0, 0, 0.7);
  font-size: 0.7rem;
  font-weight: bold;
}

button {
  background-color: #596D48;
  color: white;
  border: none;
  border-radius: 4px;
  padding: 0.5rem 2rem;
  font-size: 0.7rem;
  font-weight: bold;
  cursor: pointer;
}

button:hover {
  opacity: 0.9;
}

button:active {
  filter: brightness(0.9);
}

.bg-wrapper {
  width: 40%;
  height: 100%;
}

.bg-wrapper figure {
  position: relative;
  height: 100%;
}

.bg-wrapper img {
  object-fit: cover;
  max-height: 100%;
}

.bg-wrapper figcaption {
  position: absolute;
  color: white;
  bottom: 1rem;
  text-align: center;
  font-size: 0.75rem;
  width: 100%;
}

.bg-link {
  color: white;
}

.logo-wrapper {
  display: flex;
  position: absolute;
  top: 25%;
  background-color: rgba(0, 0, 0, 0.5);
  width: 100%;
  justify-content: center;
  align-items: center;
  padding: 0.5rem;
  flex-wrap: wrap;
}

.logo-wrapper img {
  width: 60px;
  height: auto;
  object-fit: contain;
  flex-shrink: 0;
}

.logo-wrapper h1 {
  font-family: 'Norse Bold';
  color: white;
  font-size: 4rem;
}

.hero {
  padding: 2rem;
}

.hero > p:last-child {
  margin-top: 1rem;
}

.signup-box {
  background-color: white;
  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2);
  padding: 1rem 2rem 1.5rem;
  margin-bottom: 1rem;
}

.signup-box h1 {
  font-size: 1rem;
  margin-bottom: 1rem;
}

.signup-box form {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(min(100%, 200px), 1fr));
  max-width: 500px;
  gap: 1rem;
}

.signup-actions {
  padding: 0.5rem 2rem;
}

.signup-actions button {
  margin-bottom: 1rem;
}

.inputs {
  width: 100%;
}

.login {
  font-size: 0.7rem;
}

.login > a {
  color: #596D48;
  font-weight: bold;
  text-decoration: none;
}

